# research-browser

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_chat_sessions.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: exceptions.py  settings.py
backend/app/llm_gateway/: gateway.py
backend/app/observability/: tracing.py
backend/app/services/: query_service.py
backend/app/tools/: mcp_tools.py
backend/app/workflow/: engine.py
backend/research_browser_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_core.py  test_workflow_runtime.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
scripts/: seed_demo.py
tests/: test_core.py
