[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-browser-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "sqlalchemy==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "langgraph==0.2.60",
  "httpx==0.28.1",
  "python-json-logger==2.0.7",
  "tenacity==9.0.0",
  "sse-starlette==2.1.3",
  "orjson==3.10.12",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
